--- a/aboutUs.html
+++ b/aboutUs.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="time-contnt.css" />
     <link rel="stylesheet" href="footerr.css" />
+    <link rel="stylesheet" href="css/aboutUs.css">
 </head>
 
 <body>
@@ -17,28 +18,19 @@
     <header style="margin-bottom: 0.5%">
         <div class="logo">
             <a href="index.html">
-                <,img class="logoStyle" src="images/logo2new.png" alt="Logo" />
+                <img class="logoStyle" src="images/logo2new.png" alt="Logo" />
             </a>,
-        </div>.,.
-        <nav class="navbar">.,
-            <a href="QiblaFinder.html">QIBLA FINDER</a>.,
-            <a href="masjidLocator.html">MOSQUE LOCATO.,R</a>
-            <a,. href="prayerTime.html">PRAY TIME</a,.>
-            <a href="hadithFinderBaru.html">HADI.,TH</a>
-            <a href="aboutUs.html">ABOUT US</a>,
-            ...
+        </div>
+        <nav class="navbar">
+            <a href="QiblaFinder.html">QIBLA FINDER</a>
+            <a href="masjidLocator.html">MOSQUE LOCATOR</a>
+            <a href="prayerTime.html">PRAY TIME</a>
+            <a href="hadithFinderBaru.html">HADITH</a>
+            <a href="aboutUs.html">ABOUT US</a>
+
         </nav>
     </header>
 
-
-    <div class="container">
-
-    </div>
-
-
-
-
-    ,
     <!-- Clock -->
     <div class="top-content">
         <div class="left-top">
@@ -57,7 +49,84 @@
 
     <div class="container">
 
+        <div class="content">
+
+            <div class="logoMuslimGuider">
+                <a href="index.html">
+                    <img src="images/logo2new.png" alt=" Logo" class="muslimGuiderLogo" id="logo" />
+                </a>
+            </div>
+
+            <!-- <div class="masjid">
+                <img src="images/m.jpg" alt="masjid" id="masjid">
+            </div> -->
+
+            <div class="textSegment">
+
+                <h2 style="text-align: center; text-decoration: underline;">About Us</h2>
+                <p style="text-align: center;" id="text">
+                    "<strong>Muslim Guider</strong> is a handy app for Muslims to stay connected to their faith
+                    throughout the day. Find
+                    prayer times accurately wherever you are in Malaysia using the <strong>Prayer Time</strong>. The app
+                    also features a built-in <strong>Qibla Finder</strong>, guiding you towards the direction of the
+                    Kaaba for your prayers. Locate mosques near your
+                    current location with ease using the <strong>Mosque Locator</strong>, ensuring you have a place for
+                    congregation when needed. Finally, explore
+                    a collection of <strong>Hadith</strong>, the sayings and teachings of Prophet Muhammad, to
+                    strengthen your
+                    understanding of Islam."
+                </p>
+
+                <a href="QiblaFinder.html" id="link">
+                    <h2 style="text-align: center; text-decoration: underline;">Qibla Finder</h2>
+                </a>
+                <p style="text-align: center;" id="text">"<strong>Qibla Finder</strong> Ease The user of the app to find
+                    the correct
+                    position of qibla to ensure the qibla is in the right direction. You can choose to either get the
+                    location using the gps of your device by clicking <strong>Get Qibla Direction</strong> or you can
+                    search your preffered location using <strong>Search Bar</strong>."</p>
+
+                <a href="masjidLocator.html" id="link">
+                    <h2 style="text-align: center; text-decoration: underline;">Mosque Locator</h2>
+                </a>
+                <p style="text-align: center;" id="text">"<strong>Mosque Locator</strong> will help you find the nearest
+                    mosque to your
+                    current
+                    location by using <strong>gps of your device</strong> ,the app will request for permission to use
+                    your location or you can search your preffered location using <strong>Search Bar</strong> . </p>
+
+                <a href="prayerTime.html" id="link">
+                    <h2 style="text-align: center; text-decoration: underline;">Prayer Time</h2>
+                </a>
+                <p style="text-align: center;" id="text">"<strong>Prayer Time</strong> will make sure you always get the
+                    precise prayer
+                    time for subuh,zuhr,asr,maghrib and isha at all time <strong>in Malaysia</strong>. The app will
+                    request for permission to use your location or you can search your preffered location using
+                    <strong>Search Bar</strong> "
+                </p>
+
+                <a href="hadithFinderBaru.html" id="link">
+                    <h2 style="text-align: center; text-decoration: underline;">Hadith</h2>
+                </a>
+                <p style="text-align: center;" id="text">"<strong>Hadith </strong>contains a collection of Hadith, the
+                    sayings and
+                    teachings of Prophet Muhammad, to strengthen your understanding of Islam. you can search for various
+                    hadith from many hadith writer such as <strong>Musnad Ahmad , Imam Malik, Sahih Muslim and many
+                        more</strong> "</p>
+
+
+
+
+            </div>
+
+
+
+
+        </div>
+
+
     </div>
+
 
 
 
