--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -87,7 +87,7 @@
           <p><a href="#">MuslimGuider@gmail.com</a></p>
           <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
           <p><a href="https://wa.link/3vx8uy">+60134143356 - Farid Izzuddin</a></p>
-          <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
+          <p><a href="https://wa.link/l7gqsn">+60179841826 - Tuan Firdaus</a></p>
           <p><a href="#">+60192829278 - Imran Bahar</a></p>
         </div>
       </div>
