--- a/prayerTime.html
+++ b/prayerTime.html
@@ -61,49 +61,11 @@
 
   </section>
 
-<<<<<<< HEAD
   <section class="footer">
     <div class="footer-row">
       <div class="footer-col">
         <div class="logoFoot">
           <img src="images/logo2new.png" style="max-width: 200px" />
-=======
-    <section class="footer">
-        <div class="footer-row">
-          <div class="footer-col">
-            <div class="logoFoot">
-              <img src="images/logo2new.png" style="max-width: 200px" />
-            </div>
-            <p class="text">
-              "Welcome to Muslim Guider, your go-to app for all things Islamic.
-              Here, you'll find Hadiths, which are wise sayings from the Prophet
-              Muhammad, prayers times to help you stay on track, a map to locate
-              nearby mosques, and a tool to point you in the right direction for
-              prayer."
-            </p>
-          </div>
-          <div class="footer-col">
-            <h3>Menu</h3>
-            <div class="links">
-              <p><a href="QiblaFinder.html">Qibla Finder</a></p>
-              <p><a href="masjidLocator.html">Mosque Locator</a></p>
-              <p><a href="prayerTime.html">Prayer Time</a></p>
-              <p><a href="hadithChapterbaru.html">Hadith</a></p>
-              <p><a href="#">About Us</a></p>
-            </div>
-          </div>
-  
-          <div class="footer-col">
-            <h3>Contact</h3>
-            <div class="links">
-              <p><a href="#">MuslimGuider@gmail.com</a></p>
-              <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
-              <p><a href="#">+60134143356 - Farid Izzuddin</a></p>
-              <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
-              <p><a href="#">+60192829278 - Imran Bahar</a></p>
-            </div>
-          </div>
->>>>>>> 3271c729dbb46e4d1d61fed06d1243f0ef5a2b78
         </div>
         <p class="text">
           "Welcome to Muslim Guider, your go-to app for all things Islamic.
@@ -128,12 +90,42 @@
         <h3>Contact</h3>
         <div class="links">
           <p><a href="#">MuslimGuider@gmail.com</a></p>
-          <!-- <p><a href="#">+601120517289 - Ahmad Muaz</a></p> -->
+          <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
           <p><a href="#">+60134143356 - Farid Izzuddin</a></p>
-          <!-- <p><a href="#">+60179841826 - Tuan Firdaus</a></p> -->
-          <!-- <p><a href="#">+60192829278 - Imran Bahar</a></p> -->
+          <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
+          <p><a href="#">+60192829278 - Imran Bahar</a></p>
         </div>
       </div>
+    </div>
+    <p class="text">
+      "Welcome to Muslim Guider, your go-to app for all things Islamic.
+      Here, you'll find Hadiths, which are wise sayings from the Prophet
+      Muhammad, prayers times to help you stay on track, a map to locate
+      nearby mosques, and a tool to point you in the right direction for
+      prayer."
+    </p>
+    </div>
+    <div class="footer-col">
+      <h3>Menu</h3>
+      <div class="links">
+        <p><a href="QiblaFinder.html">Qibla Finder</a></p>
+        <p><a href="masjidLocator.html">Mosque Locator</a></p>
+        <p><a href="prayerTime.html">Prayer Time</a></p>
+        <p><a href="hadithChapterbaru.html">Hadith</a></p>
+        <p><a href="#">About Us</a></p>
+      </div>
+    </div>
+
+    <div class="footer-col">
+      <h3>Contact</h3>
+      <div class="links">
+        <p><a href="mailto:s67662@ocean.umt.edu.my">MuslimGuider@gmail.com</a></p>
+        <p><a href="https://wa.link/9qnm54">+601120517289 - Ahmad Muaz</a></p>
+        <p><a href="https://wa.link/3vx8uy">+60134143356 - Farid Izzuddin</a></p>
+        <p><a href="https://wa.link/l7gqsn">+60179841826 - Tuan Firdaus</a></p>
+        <p><a href="https://wa.link/jgt02l">+60192829278 - Imran Bahar</a></p>
+      </div>
+    </div>
     </div>
   </section>
 
