--- a/hadithChapterbaru.html
+++ b/hadithChapterbaru.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="hadithChapter.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footerr.css" />
 
     <title>Hadith Chapter</title>
     <style>
@@ -85,6 +86,47 @@
 
     </div>
     <script src="hadithChapterBaru.js"></script>
+    <section class="footer">
+        <div class="footer-row">
+          <div class="footer-col">
+            <div class="logoFoot">
+              <img src="images/logo2new.png" style="max-width: 200px; margin-left: 50px;" />
+            </div>
+            <p class="text">
+              "Welcome to Muslim Guider, your go-to app for all things Islamic.
+              Here, you'll find Hadiths, which are wise sayings from the Prophet
+              Muhammad, prayers times to help you stay on track, a map to locate
+              nearby mosques, and a tool to point you in the right direction for
+              prayer."
+            </p>
+          </div>
+          <div class="footer-col">
+            <h3><strong>Menu</strong></h3>
+            <div class="links">
+              <p><a href="#">Qibla Finder</a></p>
+              <p><a href="#">Mosque Locator</a></p>
+              <p><a href="#">Prayer Time</a></p>
+              <p><a href="#">Hadith</a></p>
+              <p><a href="#">About Us</a></p>
+            </div>
+          </div>
+  
+          <div class="footer-col">
+            <h3><strong>Contact</strong></h3>
+            <div class="links">
+              <p><a href="#">MuslimGuider@gmail.com</a></p>
+              <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
+              <p><a href="#">+60134143356 - Farid Izzuddin</a></p>
+              <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
+              <p><a href="#">+60192829278 - Imran Bahar</a></p>
+            </div>
+          </div>
+        </div>
+      </section>
+  
+      <div class="copy">
+        <p>© 2024 Muslim Guider Co. All rights reserved.</p>
+      </div>
 </body>
 
 </html>
