--- a/hadithChapterbaru.html
+++ b/hadithChapterbaru.html
@@ -36,7 +36,7 @@
 
     <div class="top-content">
         <div class="left-top">
-            <h1>Mosque Locator</h1>
+            <h1>Hadith</h1>
         </div>
         <div class="right-top1">
             <h1><span id="time"></span></h1>
@@ -80,7 +80,7 @@
             </thead>
             <tbody id="hadith-data"></tbody>
         </table>
-        <!-- <p>Chapter:<span id="hadith-chapter-no"></span></p> -->
+
     </div>
 
 
