--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -117,11 +117,11 @@
             <div class="footer-col">
                 <h3>Contact</h3>
                 <div class="links">
-                    <p><a href="#">MuslimGuider@gmail.com</a></p>
-                    <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
-                    <p><a href="#">+60134143356 - Farid Izzuddin</a></p>
-                    <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
-                    <p><a href="#">+60192829278 - Imran Bahar</a></p>
+                    <p><a href="mailto:s67662@ocean.umt.edu.my">MuslimGuider@gmail.com</a></p>
+                    <p><a href="https://wa.link/9qnm54">+601120517289 - Ahmad Muaz</a></p>
+                    <p><a href="https://wa.link/3vx8uy">+60134143356 - Farid Izzuddin</a></p>
+                    <p><a href="https://wa.link/l7gqsn">+60179841826 - Tuan Firdaus</a></p>
+                    <p><a href="https://wa.link/jgt02l">+60192829278 - Imran Bahar</a></p>
                 </div>
             </div>
         </div>
