--- a/index.html
+++ b/index.html
@@ -36,15 +36,33 @@
 
     <div class="slideshow-container">
         <div class="mySlides fade">
-            <img src="images/slide1.jpg" alt="Background 1">
+            <img src="images/masjid1.jpg" alt="Background 1">
         </div>
 
         <div class="mySlides fade">
-            <img src="images/slide2.jpeg" alt="Background 2">
+            <img src="images/masjid2.jpg" alt="Background 2">
         </div>
 
         <div class="mySlides fade">
-            <img src="images/slide3.jpeg" alt="Background 3">
+            <img src="images/masjid3.jpg" alt="Background 3">
+        </div>
+        <div class="mySlides fade">
+            <img src="images/masjid4.jpg" alt="Background 3">
+        </div>
+        <div class="mySlides fade">
+            <img src="images/masjid5.jpg" alt="Background 3">
+        </div>
+        <div class="mySlides fade">
+            <img src="images/masjid6.jpg" alt="Background 3">
+        </div>
+        <div class="mySlides fade">
+            <img src="images/masjidputrajaya.jpg" alt="Background 3">
+        </div>
+        <div class="mySlides fade">
+            <img src="images/masjidTerapung.jpg" alt="Background 3">
+        </div>
+        <div class="mySlides fade">
+            <img src="images/masjidTurkey.jpg" alt="Background 3">
         </div>
     </div>
 
