--- a/prayerTime.html
+++ b/prayerTime.html
@@ -65,7 +65,7 @@
     <div class="footer-row">
       <div class="footer-col">
         <div class="logoFoot">
-          <img src="images/logo2new.png" style="max-width: 200px" />
+          <img src="images/logo2new.png" style="width: 200px" />
         </div>
         <p class="text">
           "Welcome to Muslim Guider, your go-to app for all things Islamic.
@@ -76,58 +76,29 @@
         </p>
       </div>
       <div class="footer-col">
-        <h3>Menu</h3>
+        <h3><strong>Menu</strong></h3>
         <div class="links">
           <p><a href="QiblaFinder.html">Qibla Finder</a></p>
           <p><a href="masjidLocator.html">Mosque Locator</a></p>
           <p><a href="prayerTime.html">Prayer Time</a></p>
           <p><a href="hadithChapterbaru.html">Hadith</a></p>
-          <p><a href="#">About Us</a></p>
+          <p><a href="aboutUs.html">About Us</a></p>
         </div>
       </div>
 
       <div class="footer-col">
         <h3><strong>Contact</strong></h3>
         <div class="links">
-          <p><a href="#">MuslimGuider@gmail.com</a></p>
-          <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
+          <p><a href="mailto:s67662@ocean.umt.edu.my">MuslimGuider@gmail.com</a></p>
+          <p><a href="https://wa.link/9qnm54">+601120517289 - Ahmad Muaz</a></p>
           <p><a href="https://wa.link/3vx8uy">+60134143356 - Farid Izzuddin</a></p>
-          <p><a href="https://wa.link/v0oh08">+60179841826 - Tuan Firdaus</a></p>
-          <p><a href="#">+60192829278 - Imran Bahar</a></p>
+          <p><a href="https://wa.link/l7gqsn">+60179841826 - Tuan Firdaus</a></p>
+          <p><a href="https://wa.link/jgt02l">+60192829278 - Imran Bahar</a></p>
         </div>
       </div>
     </div>
-    <p class="text">
-      "Welcome to Muslim Guider, your go-to app for all things Islamic.
-      Here, you'll find Hadiths, which are wise sayings from the Prophet
-      Muhammad, prayers times to help you stay on track, a map to locate
-      nearby mosques, and a tool to point you in the right direction for
-      prayer."
-    </p>
-    </div>
-    <div class="footer-col">
-      <h3>Menu</h3>
-      <div class="links">
-        <p><a href="QiblaFinder.html">Qibla Finder</a></p>
-        <p><a href="masjidLocator.html">Mosque Locator</a></p>
-        <p><a href="prayerTime.html">Prayer Time</a></p>
-        <p><a href="hadithChapterbaru.html">Hadith</a></p>
-        <p><a href="#">About Us</a></p>
-      </div>
-    </div>
-
-    <div class="footer-col">
-      <h3>Contact</h3>
-      <div class="links">
-        <p><a href="mailto:s67662@ocean.umt.edu.my">MuslimGuider@gmail.com</a></p>
-        <p><a href="https://wa.link/9qnm54">+601120517289 - Ahmad Muaz</a></p>
-        <p><a href="https://wa.link/3vx8uy">+60134143356 - Farid Izzuddin</a></p>
-        <p><a href="https://wa.link/l7gqsn">+60179841826 - Tuan Firdaus</a></p>
-        <p><a href="https://wa.link/jgt02l">+60192829278 - Imran Bahar</a></p>
-      </div>
-    </div>
-    </div>
   </section>
+
 
   <div class="copy">
     <p>Copyright © 2024 Muslim Guider Co. All rights reserved.</p>
