add team member (about us)

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -115,6 +115,37 @@
                         more</strong> "</p>
 
 
+                <h2 style="text-align: center; text-decoration: underline;">Team Member</h2>
+
+                <div class="epicationMember">
+                    <div>
+                        <img src="images/muaz.jpg" alt="Member 2: Muaz">
+                        <div class="textMember">- Mu'az Nabil- <br> <a
+                                href=mailto:“s65752@ocean.umt.edu.my?cc:”kevin@uplers.com”>S65752@ocean.umt.edu.my</a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="images/imran.JPG" alt="Member 1 : Imran" style="filter: brightness(150%);">
+                        <div class="textMember">- Imran Bahar- <br><a
+                                href=mailto:“s65588@ocean.umt.edu.my?cc:”kevin@uplers.com”>S65588@ocean.umt.edu.my</a>
+                        </div>
+                    </div>
+                    <!-- test2 -->
+                    <div>
+                        <img src="images/Deng.jpg" alt="Member 3: Din">
+                        <div class="textMember">- Farid Izzudin -<br><a
+                                href=mailto:“s67662@ocean.umt.edu.my?cc:”kevin@uplers.com”>s67662@ocean.umt.edu.my</a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="images/daus.jpg" alt="Member 3: Daus" style="image-zoom: 200px;">
+                        <div class="textMember">- Tuan Firdaus -<br><a
+                                href=mailto:s65650@ocean.umt.edu.my?cc:”kevin@uplers.com”>s65650@ocean.umt.edu.my</a>
+                        </div>
+                    </div>
+
+                </div>
+
 
 
             </div>
