--- a/masjidLocator.html
+++ b/masjidLocator.html
@@ -7,6 +7,8 @@
   <title>Find Nearby Mosque</title>
   <link rel="stylesheet" href="header.css" />
   <link rel="stylesheet" href="masjidLocator.css" />
+  <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
+
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzYlo7cul2YLTHD3hc0sextk-mixpOElU&libraries=places&callback=initMap"
     async defer></script>
