--- a/prayerTime.html
+++ b/prayerTime.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="prayerTime.css">
   <link rel="stylesheet" href="header.css">
   <link rel="stylesheet" href="footerr.css">
+  <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
+
   <title>Prayer Time</title>
 </head>
 
