--- a/aboutUs.html
+++ b/aboutUs.html
@@ -7,6 +7,7 @@
     <title>About Us - Muslim Guider</title>
     <link rel="stylesheet" href="header.css" />
     <link rel="stylesheet" href="masjidLocator.css" />
+    <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
 
     <link rel="stylesheet" href="time-contnt.css" />
     <link rel="stylesheet" href="footerr.css" />
@@ -63,7 +64,7 @@
 
             <div class="textSegment">
 
-                <h2 style="text-align: center; text-decoration: underline;">About Us</h2>
+                <h2 style="text-align: center; text-decoration: none;">About Us</h2>
                 <p style="text-align: center;" id="text">
                     "<strong>Muslim Guider</strong> is a handy app for Muslims to stay connected to their faith
                     throughout the day. Find
@@ -78,7 +79,7 @@
                 </p>
 
                 <a href="QiblaFinder.html" id="link">
-                    <h2 style="text-align: center; text-decoration: underline;">Qibla Finder</h2>
+                    <h2 style="text-align: center; text-decoration: none;">Qibla Finder</h2>
                 </a>
                 <p style="text-align: center;" id="text">"<strong>Qibla Finder</strong> Ease The user of the app to find
                     the correct
@@ -87,7 +88,7 @@
                     search your preffered location using <strong>Search Bar</strong>."</p>
 
                 <a href="masjidLocator.html" id="link">
-                    <h2 style="text-align: center; text-decoration: underline;">Mosque Locator</h2>
+                    <h2 style="text-align: center; text-decoration: none;">Mosque Locator</h2>
                 </a>
                 <p style="text-align: center;" id="text">"<strong>Mosque Locator</strong> will help you find the nearest
                     mosque to your
@@ -96,7 +97,7 @@
                     your location or you can search your preffered location using <strong>Search Bar</strong> . </p>
 
                 <a href="prayerTime.html" id="link">
-                    <h2 style="text-align: center; text-decoration: underline;">Prayer Time</h2>
+                    <h2 style="text-align: center; text-decoration: none;">Prayer Time</h2>
                 </a>
                 <p style="text-align: center;" id="text">"<strong>Prayer Time</strong> will make sure you always get the
                     precise prayer
@@ -106,7 +107,7 @@
                 </p>
 
                 <a href="hadithFinderBaru.html" id="link">
-                    <h2 style="text-align: center; text-decoration: underline;">Hadith</h2>
+                    <h2 style="text-align: center; text-decoration: none;">Hadith</h2>
                 </a>
                 <p style="text-align: center;" id="text">"<strong>Hadith </strong>contains a collection of Hadith, the
                     sayings and
@@ -115,7 +116,7 @@
                         more</strong> "</p>
 
 
-                <h2 style="text-align: center; text-decoration: underline;">Team Member</h2>
+                <h2 style="text-align: center; text-decoration: none;">Team Member</h2>
 
                 <div class="epicationMember">
                     <div>
