--- a/hadithFinderBaru.html
+++ b/hadithFinderBaru.html
@@ -2,149 +2,151 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hadith Finder</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="hadithFinder.css">
-    <link rel="stylesheet" href="time-contnt.css">
-    <link rel="stylesheet" href="header.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="footerr.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hadith Finder</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <link rel="stylesheet" href="hadithFinder.css">
+  <link rel="stylesheet" href="time-contnt.css">
+  <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
+
+  <link rel="stylesheet" href="header.css">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="footerr.css" />
 </head>
 
 <body>
-    <header style="margin-bottom: 1.9%">
-      <div class="logo">
-        <a href="Homepage.html">
-          <img class="logoStyle" src="images/logo2new.png" />
-        </a>
-      </div>
-
-      <nav class="navbar">
-        <a href="QiblaFinder.html">QIBLA FINDER</a>
-        <a href="masjidLocator.html">MOSQUE LOCATOR</a>
-        <a href="prayerTime.html">PRAY TIME</a>
-        <a href="hadithFinderBaru.html">HADITH</a>
-        <a href="aboutUs.html">ABOUT US</a>
-
-      </nav>
-    </header>
-
-    <div class="top-content">
-      <div class="left-top">
-        <h1>Hadith</h1>
-      </div>
-      <div class="right-top">
-        <h1><span id="time"></span></h1>
-        <script src="js/time.js"></script>
-      </div>
-    </div>
-    <div class="middle-content">
-      <hr style="margin-top: 2.1%; margin-bottom: 1%" />
-    </div>
-        <div class="head-title">
-            <h2>Find Hadith For Pledge Alegiance</h2>
-        </div>
-
-        <div class="hadith-list">
-            <table>
-                <tr>
-                    <th>Hadith Name</th>
-                    <th>Hadith Writer</th>
-                </tr>
-                <tr>
-                    <td><a href="HadithChapterBaru.html?value=0">Sunan Abu Dawood</a></td>
-                    <td><a href="HadithChapterBaru.html?value=0">Imam Abu Dawud Sulayman ibn al-Ash'ath as-Sijistani</a></td>
-                </tr>
-                <tr>
-                    <td><a href="HadithChapterBaru.html?value=1">Musnad Ahmad</a></td>
-                    <td><a href="HadithChapterBaru.html?value=1">Imam Ahmad ibn Hanbal</a></td>
-                </tr>
-                <tr>
-                    <td><a href="HadithChapterBaru.html?value=2">Sahih Bukhari</a></td>
-                    <td><a href="HadithChapterBaru.html?value=2">Imam Bukhari</a></td>
-                </tr>
-                <tr>
-                    <td><a href="HadithChapterBaru.html?value=3">Sunan al-Darimi</a></td>
-                    <td><a href="HadithChapterBaru.html?value=3">Imam Abi Muhammad al-Darimi</a></td>
-                </tr>
-                <tr>
-                    <td><a href="HadithChapterBaru.html?value=4">Sunan Ibn-e-Majah</a></td>
-                    <td><a href="HadithChapterBaru.html?value=4">Imam Muhammad bin Yazid Ibn Majah al-Qazvini</a></td>
-                </tr>
-            </table>
-            <table>
-                <tr>
-                    <th>Hadith Name</th>
-                    <th>Hadith Writer</th>
-                <tr>
-                    <tr>
-                        <td><a href="HadithChapterBaru.html?value=5">Muwatta Imam Malik </a></td>
-                        <td><a href="HadithChapterBaru.html?value=5">Imam Malik ibn Anas</a></td>
-                    </tr>      
-                    <tr>
-                        <td><a href="HadithChapterBaru.html?value=6">Sahih Muslim</a></td>
-                        <td><a href="HadithChapterBaru.html?value=6">Imam Muslim</a></td>
-                    </tr>  
-                    <tr>
-                        <td><a href="HadithChapterBaru.html?value=7">Sunan An-Nasa`i</a></td>
-                        <td><a href="HadithChapterBaru.html?value=7">Imam Ahmad an-Nasa`i</a></td>
-                    </tr>  
-
-                      <tr>
-                        <td><a href="HadithChapterBaru.html?value=8">Jami' Al-Tirmidhi</a></td>
-                        <td><a href="HadithChapterBaru.html?value=8">Abu `Isa Muhammad at-Tirmidhi</a></td>
-                    </tr>  
-                </tr>
-            </table>
-        </div>
+  <header style="margin-bottom: 1.9%">
+    <div class="logo">
+      <a href="Homepage.html">
+        <img class="logoStyle" src="images/logo2new.png" />
+      </a>
     </div>
 
+    <nav class="navbar">
+      <a href="QiblaFinder.html">QIBLA FINDER</a>
+      <a href="masjidLocator.html">MOSQUE LOCATOR</a>
+      <a href="prayerTime.html">PRAY TIME</a>
+      <a href="hadithFinderBaru.html">HADITH</a>
+      <a href="aboutUs.html">ABOUT US</a>
 
-    <script src="hadithFinderBaru.js"></script>
-    
-    <section class="footer">
-        <div class="footer-row">
-          <div class="footer-col">
-            <div class="logoFoot">
-              <img src="images/logo2new.png" style="max-width: 200px; margin-left: 50px;" />
-            </div>
-            <p class="text">
-              "Welcome to Muslim Guider, your go-to app for all things Islamic.
-              Here, you'll find Hadiths, which are wise sayings from the Prophet
-              Muhammad, prayers times to help you stay on track, a map to locate
-              nearby mosques, and a tool to point you in the right direction for
-              prayer."
-            </p>
-          </div>
-          <div class="footer-col">
-            <h3><strong>Menu</strong></h3>
-            <div class="links">
-              <p><a href="#">Qibla Finder</a></p>
-              <p><a href="#">Mosque Locator</a></p>
-              <p><a href="#">Prayer Time</a></p>
-              <p><a href="#">Hadith</a></p>
-              <p><a href="#">About Us</a></p>
-            </div>
-          </div>
-  
-          <div class="footer-col">
-            <h3><strong>Contact</strong></h3>
-            <div class="links">
-              <p><a href="#">MuslimGuider@gmail.com</a></p>
-              <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
-              <p><a href="#">+60134143356 - Farid Izzuddin</a></p>
-              <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
-              <p><a href="#">+60192829278 - Imran Bahar</a></p>
-            </div>
-          </div>
+    </nav>
+  </header>
+
+  <div class="top-content">
+    <div class="left-top">
+      <h1>Hadith</h1>
+    </div>
+    <div class="right-top">
+      <h1><span id="time"></span></h1>
+      <script src="js/time.js"></script>
+    </div>
+  </div>
+  <div class="middle-content">
+    <hr style="margin-top: 2.1%; margin-bottom: 1%" />
+  </div>
+  <div class="head-title">
+    <h2>Find Hadith For Pledge Alegiance</h2>
+  </div>
+
+  <div class="hadith-list">
+    <table>
+      <tr>
+        <th>Hadith Name</th>
+        <th>Hadith Writer</th>
+      </tr>
+      <tr>
+        <td><a href="HadithChapterBaru.html?value=0">Sunan Abu Dawood</a></td>
+        <td><a href="HadithChapterBaru.html?value=0">Imam Abu Dawud Sulayman ibn al-Ash'ath as-Sijistani</a></td>
+      </tr>
+      <tr>
+        <td><a href="HadithChapterBaru.html?value=1">Musnad Ahmad</a></td>
+        <td><a href="HadithChapterBaru.html?value=1">Imam Ahmad ibn Hanbal</a></td>
+      </tr>
+      <tr>
+        <td><a href="HadithChapterBaru.html?value=2">Sahih Bukhari</a></td>
+        <td><a href="HadithChapterBaru.html?value=2">Imam Bukhari</a></td>
+      </tr>
+      <tr>
+        <td><a href="HadithChapterBaru.html?value=3">Sunan al-Darimi</a></td>
+        <td><a href="HadithChapterBaru.html?value=3">Imam Abi Muhammad al-Darimi</a></td>
+      </tr>
+      <tr>
+        <td><a href="HadithChapterBaru.html?value=4">Sunan Ibn-e-Majah</a></td>
+        <td><a href="HadithChapterBaru.html?value=4">Imam Muhammad bin Yazid Ibn Majah al-Qazvini</a></td>
+      </tr>
+    </table>
+    <table>
+      <tr>
+        <th>Hadith Name</th>
+        <th>Hadith Writer</th>
+      <tr>
+      <tr>
+        <td><a href="HadithChapterBaru.html?value=5">Muwatta Imam Malik </a></td>
+        <td><a href="HadithChapterBaru.html?value=5">Imam Malik ibn Anas</a></td>
+      </tr>
+      <tr>
+        <td><a href="HadithChapterBaru.html?value=6">Sahih Muslim</a></td>
+        <td><a href="HadithChapterBaru.html?value=6">Imam Muslim</a></td>
+      </tr>
+      <tr>
+        <td><a href="HadithChapterBaru.html?value=7">Sunan An-Nasa`i</a></td>
+        <td><a href="HadithChapterBaru.html?value=7">Imam Ahmad an-Nasa`i</a></td>
+      </tr>
+
+      <tr>
+        <td><a href="HadithChapterBaru.html?value=8">Jami' Al-Tirmidhi</a></td>
+        <td><a href="HadithChapterBaru.html?value=8">Abu `Isa Muhammad at-Tirmidhi</a></td>
+      </tr>
+      </tr>
+    </table>
+  </div>
+  </div>
+
+
+  <script src="hadithFinderBaru.js"></script>
+
+  <section class="footer">
+    <div class="footer-row">
+      <div class="footer-col">
+        <div class="logoFoot">
+          <img src="images/logo2new.png" style="max-width: 200px; margin-left: 50px;" />
         </div>
-      </section>
-  
-      <div class="copy">
-        <p>© 2024 Muslim Guider Co. All rights reserved.</p>
+        <p class="text">
+          "Welcome to Muslim Guider, your go-to app for all things Islamic.
+          Here, you'll find Hadiths, which are wise sayings from the Prophet
+          Muhammad, prayers times to help you stay on track, a map to locate
+          nearby mosques, and a tool to point you in the right direction for
+          prayer."
+        </p>
       </div>
+      <div class="footer-col">
+        <h3><strong>Menu</strong></h3>
+        <div class="links">
+          <p><a href="#">Qibla Finder</a></p>
+          <p><a href="#">Mosque Locator</a></p>
+          <p><a href="#">Prayer Time</a></p>
+          <p><a href="#">Hadith</a></p>
+          <p><a href="#">About Us</a></p>
+        </div>
+      </div>
+
+      <div class="footer-col">
+        <h3><strong>Contact</strong></h3>
+        <div class="links">
+          <p><a href="#">MuslimGuider@gmail.com</a></p>
+          <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
+          <p><a href="#">+60134143356 - Farid Izzuddin</a></p>
+          <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
+          <p><a href="#">+60192829278 - Imran Bahar</a></p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="copy">
+    <p>© 2024 Muslim Guider Co. All rights reserved.</p>
+  </div>
 </body>
 
 </html>
