--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <p><a href="masjidLocator.html">Mosque Locator</a></p>
                     <p><a href="prayerTime.html">Prayer Time</a></p>
                     <p><a href="hadithChapterbaru.html">Hadith</a></p>
-                    <p><a href="#">About Us</a></p>
+                    <p><a href="aboutUs.html">About Us</a></p>
                 </div>
             </div>
 
