--- a/aboutUs.html
+++ b/aboutUs.html
@@ -189,11 +189,11 @@
             <div class="footer-col">
                 <h3><strong>Menu</strong></h3>
                 <div class="links">
-                    <p><a href="#">Qibla Finder</a></p>
-                    <p><a href="#">Mosque Locator</a></p>
-                    <p><a href="#">Prayer Time</a></p>
-                    <p><a href="#">Hadith</a></p>
-                    <p><a href="#">About Us</a></p>
+                    <p><a href="QiblaFinder.html">Qibla Finder</a></p>
+                    <p><a href="masjidLocator.html">Mosque Locator</a></p>
+                    <p><a href="prayerTime.html">Prayer Time</a></p>
+                    <p><a href="hadithFinderBaru.html">Hadith</a></p>
+                    <p><a href="aboutUs.html">About Us</a></p>
                 </div>
             </div>
 
