--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -16,37 +16,33 @@
 <body>
     <script src="js/QiblaFinderV2.js"></script>
 
-    <header>
+    <header style="font-size: 0px;">
         <div class="logo">
             <a href="index.html">
-                <img class="logoStyle" src="images/logo2new.png" />
-
+                <img class="logoStyle" src="images/logo2new.png" alt="Logo" />
             </a>
         </div>
-
         <nav class="navbar">
             <a href="QiblaFinder.html">QIBLA FINDER</a>
             <a href="masjidLocator.html">MOSQUE LOCATOR</a>
             <a href="prayerTime.html">PRAY TIME</a>
             <a href="hadithFinderBaru.html">HADITH</a>
             <a href="aboutUs.html">ABOUT US</a>
+
         </nav>
     </header>
-    <div class="content">
-        <div class="top-content">
-            <div class="left-top">
-                <h1>Qiblat Finder</h1>
-            </div>
 
-            <div class="right-top">
-                <h1><span id="time"></span></h1>
-                <script src="js/time.js"></script>
-            </div>
+    <div class="top-content">
+        <div class="left-top">
+            <h1>Qibla Finder</h1>
+        </div>
+        <div class="right-top1">
+            <h1><span id="time"></span></h1>
+            <script src="js/time.js"></script>
         </div>
     </div>
-
     <div class="middle-content">
-        <hr style="margin-top: 0.7%; margin-bottom: 1%; margin-right: 0" />
+        <hr style="margin-top: 0.7%; margin-bottom: 1%" />
     </div>
 
 
