settling qiblla finder

--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="qfStyle.css">
+    <link rel="stylesheet" href="header.css">
+
     <link rel="stylesheet" href="footerr.css" />
+    <link rel="stylesheet" href="qfStyle.css">
+
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="time-contnt.css">
-    <link rel="stylesheet" href="header.css">
     <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
     <title>Qiblat Finder</title>
 </head>
@@ -16,14 +18,14 @@
 <body>
     <script src="js/QiblaFinderV2.js"></script>
 
-    <header style="font-size: 0px;">
+    <header>
         <div class="logo">
             <a href="index.html">
                 <img class="logoStyle" src="images/logo2new.png" alt="Logo" />
             </a>
         </div>
-        <nav class="navbar">
-            <a href="QiblaFinder.html">QIBLA FINDER</a>
+        <nav class="navbar" style="padding: 0;">
+            <a href="QiblaFinder.html" style="font-family: ;">QIBLA FINDER</a>
             <a href="masjidLocator.html">MOSQUE LOCATOR</a>
             <a href="prayerTime.html">PRAY TIME</a>
             <a href="hadithFinderBaru.html">HADITH</a>
@@ -42,7 +44,7 @@
         </div>
     </div>
     <div class="middle-content">
-        <hr style="margin-top: 0.7%; margin-bottom: 1%" />
+        <hr style="margin-top: 1.7%; margin-bottom: 1%" />
     </div>
 
 
