--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
     </section>
 
     <div class="copy">
-        <p>Copyright © 2024 Muslim Guider Co. All rights reserved.</p>
+        <p>© 2024 Muslim Guider Co. All rights reserved.</p>
+
     </div>
 
     <script>
