nama din ade dua D

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -134,7 +134,7 @@
                     <!-- test2 -->
                     <div>
                         <img src="images/Deng.jpg" alt="Member 3: Din">
-                        <div class="textMember">- Farid Izzudin -<br><a
+                        <div class="textMember">- Farid Izzuddin -<br><a
                                 href=mailto:“s67662@ocean.umt.edu.my?cc:”kevin@uplers.com”>s67662@ocean.umt.edu.my</a>
                         </div>
                     </div>
