--- a/prayerTime.html
+++ b/prayerTime.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar">
       <a href="QiblaFinder.html">QIBLA FINDER</a>
-      <a href="masjidLocator.html">MASJID LOCATOR</a>
+      <a href="masjidLocator.html">MOSQUE LOCATOR</a>
       <a href="prayerTime.html">PRAY TIME</a>
       <a href="hadithFinderBaru.html">HADITH</a>
       <a href="aboutUs.html">ABOUT US</a>
