--- a/hadithFinderBaru.html
+++ b/hadithFinderBaru.html
@@ -56,24 +56,24 @@
         <th>Hadith Writer</th>
       </tr>
       <tr>
-        <td><a href="HadithChapterBaru.html?value=0">Sunan Abu Dawood</a></td>
-        <td><a href="HadithChapterBaru.html?value=0">Imam Abu Dawud Sulayman ibn al-Ash'ath as-Sijistani</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru0.html">Sunan Abu Dawood</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru0.html">Imam Abu Dawud Sulayman ibn al-Ash'ath as-Sijistani</a></td>
       </tr>
       <tr>
-        <td><a href="HadithChapterBaru.html?value=1">Musnad Ahmad</a></td>
-        <td><a href="HadithChapterBaru.html?value=1">Imam Ahmad ibn Hanbal</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru1.html">Musnad Ahmad</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru1.html">Imam Ahmad ibn Hanbal</a></td>
       </tr>
       <tr>
-        <td><a href="HadithChapterBaru.html?value=2">Sahih Bukhari</a></td>
-        <td><a href="HadithChapterBaru.html?value=2">Imam Bukhari</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru2.html">Sahih Bukhari</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru2.html"">Imam Bukhari</a></td>
       </tr>
       <tr>
-        <td><a href="HadithChapterBaru.html?value=3">Sunan al-Darimi</a></td>
-        <td><a href="HadithChapterBaru.html?value=3">Imam Abi Muhammad al-Darimi</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru3.html">Sunan al-Darimi</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru3.html">Imam Abi Muhammad al-Darimi</a></td>
       </tr>
       <tr>
-        <td><a href="HadithChapterBaru.html?value=4">Sunan Ibn-e-Majah</a></td>
-        <td><a href="HadithChapterBaru.html?value=4">Imam Muhammad bin Yazid Ibn Majah al-Qazvini</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru4.html">Sunan Ibn-e-Majah</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru4.html">Imam Muhammad bin Yazid Ibn Majah al-Qazvini</a></td>
       </tr>
     </table>
     <table>
@@ -82,21 +82,21 @@
         <th>Hadith Writer</th>
       <tr>
       <tr>
-        <td><a href="HadithChapterBaru.html?value=5">Muwatta Imam Malik </a></td>
-        <td><a href="HadithChapterBaru.html?value=5">Imam Malik ibn Anas</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru5.html">Muwatta Imam Malik </a></td>
+        <td><a href="/only_hadith/hadithChapterbaru5.html">Imam Malik ibn Anas</a></td>
       </tr>
       <tr>
-        <td><a href="HadithChapterBaru.html?value=6">Sahih Muslim</a></td>
-        <td><a href="HadithChapterBaru.html?value=6">Imam Muslim</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru6.html">Sahih Muslim</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru6.html">Imam Muslim</a></td>
       </tr>
       <tr>
-        <td><a href="HadithChapterBaru.html?value=7">Sunan An-Nasa`i</a></td>
-        <td><a href="HadithChapterBaru.html?value=7">Imam Ahmad an-Nasa`i</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru7.html">Sunan An-Nasa`i</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru7.html">Imam Ahmad an-Nasa`i</a></td>
       </tr>
 
       <tr>
-        <td><a href="HadithChapterBaru.html?value=8">Jami' Al-Tirmidhi</a></td>
-        <td><a href="HadithChapterBaru.html?value=8">Abu `Isa Muhammad at-Tirmidhi</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru8.html">Jami' Al-Tirmidhi</a></td>
+        <td><a href="/only_hadith/hadithChapterbaru8.html">Abu `Isa Muhammad at-Tirmidhi</a></td>
       </tr>
       </tr>
     </table>
@@ -123,26 +123,27 @@
       <div class="footer-col">
         <h3><strong>Menu</strong></h3>
         <div class="links">
-          <p><a href="QiblaFinder.html">Qibla Finder</a></p>
-          <p><a href="masjidLocator.html">Mosque Locator</a></p>
-          <p><a href="prayerTime.html">Prayer Time</a></p>
-          <p><a href="hadithFinderBaru.html">Hadith</a></p>
-          <p><a href="aboutUs.html">About Us</a></p>
+          <p><a href="/QiblaFinder.html">Qibla Finder</a></p>
+          <p><a href="/masjidLocator.html">Mosque Locator</a></p>
+          <p><a href="/prayerTime.html">Prayer Time</a></p>
+          <p><a href="/hadithFinderBaru.html">Hadith</a></p>
+          <p><a href="/aboutUs.html">About Us</a></p>
         </div>
       </div>
 
       <div class="footer-col">
         <h3><strong>Contact</strong></h3>
         <div class="links">
-          <p><a href="#">MuslimGuider@gmail.com</a></p>
-          <p><a href="#">+601120517289 - Ahmad Muaz</a></p>
-          <p><a href="#">+60134143356 - Farid Izzuddin</a></p>
-          <p><a href="#">+60179841826 - Tuan Firdaus</a></p>
-          <p><a href="#">+60192829278 - Imran Bahar</a></p>
+          <p><a href="mailto:s67662@ocean.umt.edu.my">MuslimGuider@gmail.com</a></p>
+          <p><a href="https://wa.link/9qnm54">+601120517289 - Ahmad Muaz</a></p>
+          <p><a href="https://wa.link/3vx8uy">+60134143356 - Farid Izzuddin</a></p>
+          <p><a href="https://wa.link/l7gqsn">+60179841826 - Tuan Firdaus</a></p>
+          <p><a href="https://wa.link/jgt02l">+60192829278 - Imran Bahar</a></p>
         </div>
       </div>
     </div>
   </section>
+
 
   <div class="copy">
     <p>© 2024 Muslim Guider Co. All rights reserved.</p>
