--- a/hadithFinderBaru.html
+++ b/hadithFinderBaru.html
@@ -56,7 +56,7 @@
         <th>Hadith Writer</th>
       </tr>
       <tr>
-        <td><a href="only_hadith/hadithChapterbaru0.html">Sunan Abu Dawood</a></td>
+        <td><a href="">Sunan Abu Dawood</a></td>
         <td><a href="/only_hadith/hadithChapterbaru0.html">Imam Abu Dawud Sulayman ibn al-Ash'ath as-Sijistani</a></td>
       </tr>
       <tr>
