--- a/hadithFinderBaru.html
+++ b/hadithFinderBaru.html
@@ -56,8 +56,8 @@
         <th>Hadith Writer</th>
       </tr>
       <tr>
-        <td><a href="">Sunan Abu Dawood</a></td>
-        <td><a href="/only_hadith/hadithChapterbaru0.html">Imam Abu Dawud Sulayman ibn al-Ash'ath as-Sijistani</a></td>
+        <td><a href="only_hadith/hadithChapterbaru0.html">Sunan Abu Dawood</a></td>
+        <td><a href="only_hadith/hadithChapterbaru0.html">Imam Abu Dawud Sulayman ibn al-Ash'ath as-Sijistani</a></td>
       </tr>
       <tr>
         <td><a href="only_hadith/hadithChapterbaru1.html">Musnad Ahmad</a></td>
