--- a/hadithChapterbaru8.html
+++ b/hadithChapterbaru8.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/time-contnt.css">
-    <link rel="stylesheet" href="/hadithChapter.css">
+    <link rel="stylesheet" href="time-contnt.css">
+    <link rel="stylesheet" href="hadithChapter.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
+    <link rel="icon" type="image/x-icon" href="images/logo2new.png">
 
-    <link rel="stylesheet" href="/header.css">
-    <link rel="stylesheet" href="/footerr.css"/>
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footerr.css"/>
 
     <title>Hadith Chapter</title>
     <style>
@@ -23,17 +23,17 @@
 <body>
     <header style="margin-bottom: 1.9%">
         <div class="logo">
-            <a href="/index.html">
-                <img class="logoStyle" src="/images/logo2new.png" />
+            <a href="index.html">
+                <img class="logoStyle" src="images/logo2new.png" />
             </a>
         </div>
 
         <nav class="navbar">
-            <a href="/QiblaFinder.html">QIBLA FINDER</a>
-            <a href="/masjidLocator.html">MOSQUE LOCATOR</a>
-            <a href="/prayerTime.html">PRAY TIME</a>
-            <a href="/hadithFinderBaru.html">HADITH</a>
-            <a href="/aboutUs.html">ABOUT US</a>
+            <a href="QiblaFinder.html">QIBLA FINDER</a>
+            <a href="masjidLocator.html">MOSQUE LOCATOR</a>
+            <a href="prayerTime.html">PRAY TIME</a>
+            <a href="hadithFinderBaru.html">HADITH</a>
+            <a href="aboutUs.html">ABOUT US</a>
         </nav>
     </header>
 
@@ -43,7 +43,7 @@
         </div>
         <div class="right-top1">
             <h1><span id="time"></span></h1>
-            <script src="/js/time.js"></script>
+            <script src="js/time.js"></script>
         </div>
     </div>
     <div class="middle-content">
@@ -88,12 +88,12 @@
 
 
     </div>
-    <script src="/only_hadith/js/hadithChapterBaru8.js"></script>
+    <script src="only_hadith/js/hadithChapterBaru8.js"></script>
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
                 <div class="logoFoot">
-                    <img src="/images/logo2new.png" style="max-width: 200px; margin-left: 50px;" />
+                    <img src="images/logo2new.png" style="max-width: 200px; margin-left: 50px;" />
                 </div>
                 <p class="text">
                     "Welcome to Muslim Guider, your go-to app for all things Islamic.
@@ -106,11 +106,11 @@
             <div class="footer-col">
                 <h3><strong>Menu</strong></h3>
                 <div class="links">
-                    <p><a href="/QiblaFinder.html">Qibla Finder</a></p>
-                    <p><a href="/masjidLocator.html">Mosque Locator</a></p>
-                    <p><a href="/prayerTime.html">Prayer Time</a></p>
-                    <p><a href="/hadithFinderBaru.html">Hadith</a></p>
-                    <p><a href="/aboutUs.html">About Us</a></p>
+                    <p><a href="QiblaFinder.html">Qibla Finder</a></p>
+                    <p><a href="masjidLocator.html">Mosque Locator</a></p>
+                    <p><a href="prayerTime.html">Prayer Time</a></p>
+                    <p><a href="hadithFinderBaru.html">Hadith</a></p>
+                    <p><a href="aboutUs.html">About Us</a></p>
                 </div>
             </div>
 
