--- a/hadithFinderBaru.html
+++ b/hadithFinderBaru.html
@@ -57,23 +57,23 @@
       </tr>
       <tr>
         <td><a href="hadithChapterbaru0.html">Sunan Abu Dawoods</a></td>
-        <td><a href="only_hadith/hadithChapterbaru0.html">Imam Abu Dawud Sulayman ibn al-Ash'ath as-Sijistani</a></td>
+        <td><a href="hadithChapterbaru0.html">Imam Abu Dawud Sulayman ibn al-Ash'ath as-Sijistani</a></td>
       </tr>
       <tr>
-        <td><a href="/only_hadith/hadithChapterbaru1.html">Musnad Ahmad</a></td>
-        <td><a href="only_hadith/hadithChapterbaru1.html">Imam Ahmad ibn Hanbal</a></td>
+        <td><a href="hadithChapterbaru1.html">Musnad Ahmad</a></td>
+        <td><a href="hadithChapterbaru1.html">Imam Ahmad ibn Hanbal</a></td>
       </tr>
       <tr>
-        <td><a href="only_hadith/hadithChapterbaru2.html">Sahih Bukhari</a></td>
-        <td><a href="only_hadith/hadithChapterbaru2.html"">Imam Bukhari</a></td>
+        <td><a href="hadithChapterbaru2.html">Sahih Bukhari</a></td>
+        <td><a href="hadithChapterbaru2.html"">Imam Bukhari</a></td>
       </tr>
       <tr>
-        <td><a href="only_hadith/hadithChapterbaru3.html">Sunan al-Darimi</a></td>
-        <td><a href="only_hadith/hadithChapterbaru3.html">Imam Abi Muhammad al-Darimi</a></td>
+        <td><a href="hadithChapterbaru3.html">Sunan al-Darimi</a></td>
+        <td><a href="hadithChapterbaru3.html">Imam Abi Muhammad al-Darimi</a></td>
       </tr>
       <tr>
-        <td><a href="only_hadith/hadithChapterbaru4.html">Sunan Ibn-e-Majah</a></td>
-        <td><a href="only_hadith/hadithChapterbaru4.html">Imam Muhammad bin Yazid Ibn Majah al-Qazvini</a></td>
+        <td><a href="hadithChapterbaru4.html">Sunan Ibn-e-Majah</a></td>
+        <td><a href="hadithChapterbaru4.html">Imam Muhammad bin Yazid Ibn Majah al-Qazvini</a></td>
       </tr>
     </table>
     <table>
@@ -82,21 +82,21 @@
         <th>Hadith Writer</th>
       <tr>
       <tr>
-        <td><a href="only_hadith/hadithChapterbaru5.html">Muwatta Imam Malik </a></td>
-        <td><a href="only_hadith/hadithChapterbaru5.html">Imam Malik ibn Anas</a></td>
+        <td><a href="hadithChapterbaru5.html">Muwatta Imam Malik </a></td>
+        <td><a href="hadithChapterbaru5.html">Imam Malik ibn Anas</a></td>
       </tr>
       <tr>
-        <td><a href="only_hadith/hadithChapterbaru6.html">Sahih Muslim</a></td>
-        <td><a href="only_hadith/hadithChapterbaru6.html">Imam Muslim</a></td>
+        <td><a href="hadithChapterbaru6.html">Sahih Muslim</a></td>
+        <td><a href="hadithChapterbaru6.html">Imam Muslim</a></td>
       </tr>
       <tr>
-        <td><a href="only_hadith/hadithChapterbaru7.html">Sunan An-Nasa`i</a></td>
-        <td><a href="only_hadith/hadithChapterbaru7.html">Imam Ahmad an-Nasa`i</a></td>
+        <td><a href="hadithChapterbaru7.html">Sunan An-Nasa`i</a></td>
+        <td><a href="hadithChapterbaru7.html">Imam Ahmad an-Nasa`i</a></td>
       </tr>
 
       <tr>
-        <td><a href="only_hadith/hadithChapterbaru8.html">Jami' Al-Tirmidhi</a></td>
-        <td><a href="only_hadith/hadithChapterbaru8.html">Abu `Isa Muhammad at-Tirmidhi</a></td>
+        <td><a href="hadithChapterbaru8.html">Jami' Al-Tirmidhi</a></td>
+        <td><a href="hadithChapterbaru8.html">Abu `Isa Muhammad at-Tirmidhi</a></td>
       </tr>
       </tr>
     </table>
