--- a/hadithFinderBaru.html
+++ b/hadithFinderBaru.html
@@ -18,7 +18,7 @@
 <body>
   <header style="margin-bottom: 1.9%">
     <div class="logo">
-      <a href="Homepage.html">
+      <a href="index.html">
         <img class="logoStyle" src="images/logo2new.png" />
       </a>
     </div>
