--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="text-container">
         <div class="texts">
-            <h1>Welcome to Muslim Guiders</h1>
+            <h1>Welcome to Muslim Guider</h1>
             <p>“Maka janganlah kamu merasa lemah dan janganlah kamu berputus asa, padahal kamulah orang yang lebih
                 tinggi kedudukannya jika kamu orang yang beriman.” [Surah Ali Imran: 139] </p>
         </div>
