--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </div>
 
     <div class="slideshow-container">
-        <div class="mySlides fade">
+        <DIV class="mySlides fade">
             <img src="images/masjid1.jpg" alt="Background 1">
-        </div>
+        </DIV>
 
         <div class="mySlides fade">
             <img src="images/masjid2.jpg" alt="Background 2">
