Underline team names in contact info for clarity AboutUs.html

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -186,16 +186,17 @@
                 </div>
             </div>
 
-            <div class="footer-col">
-                <h3><strong>Contact</strong></h3>
-                <div class="links">
-                    <p><a href="mailto:s67662@ocean.umt.edu.my">MuslimGuider@gmail.com</a></p>
-                    <p><a href="https://wa.link/9qnm54">+601120517289 - Ahmad Muaz</a></p>
-                    <p><a href="https://wa.link/3vx8uy">+60134143356 - Farid Izzuddin</a></p>
-                    <p><a href="https://wa.link/l7gqsn">+60179841826 - Tuan Firdaus</a></p>
-                    <p><a href="https://wa.link/jgt02l">+60192829278 - Imran Bahar</a></p>
-                </div>
-            </div>
+           <div class="footer-col">
+    <h3><strong>Contact</strong></h3>
+    <div class="links">
+        <p><a href="mailto:s67662@ocean.umt.edu.my">MuslimGuider@gmail.com</a></p>
+        <p><a href="https://wa.link/9qnm54">+601120517289 - <span style="text-decoration: underline;">Ahmad Muaz</span></a></p>
+        <p><a href="https://wa.link/3vx8uy">+60134143356 - <span style="text-decoration: underline;">Farid Izzuddin</span></a></p>
+        <p><a href="https://wa.link/l7gqsn">+60179841826 - <span style="text-decoration: underline;">Tuan Firdaus</span></a></p>
+        <p><a href="https://wa.link/jgt02l">+60192829278 - <span style="text-decoration: underline;">Imran Bahar</span></a></p>
+    </div>
+</div>
+
         </div>
     </section>
 
