--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="footerr.css">
-    <title>Muslim Guider</title>
+    <title>Muslim Guiderss</title>
 </head>
 
 <body>
