--- a/QiblaFinder.html
+++ b/QiblaFinder.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="footerr.css" />
     <link rel="stylesheet" href="qfStyle.css">
 
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel='stylesheet'>
     <link rel="stylesheet" href="time-contnt.css">
     <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
     <title>Qiblat Finder</title>
