--- a/aboutUs.html
+++ b/aboutUs.html
@@ -122,7 +122,7 @@
                     <div>
                         <img src="images/muaz.jpg" alt="Member 2: Muaz">
                         <div class="textMember">- Mu'az Nabil- <br> <a
-                                href=mailto:“s65752@ocean.umt.edu.my?cc:”kevin@uplers.com”>S65752@ocean.umt.edu.my</a>
+                                href="mailto:s65752@ocean.umt.edu.my?cc:kevin@uplers.com">S65752@ocean.umt.edu.my</a>
                         </div>
                     </div>
                     <div>
