--- a/aboutUs.html
+++ b/aboutUs.html
@@ -81,7 +81,7 @@
                 <a href="QiblaFinder.html" id="link">
                     <h2 style="text-align: center; text-decoration: none;">Qibla Finder</h2>
                 </a>
-                <p style="text-align: center;" id="text">"<strong>Qibla Finder</strong> Ease The user of the app to find
+                <p style="text-align: center;" id="text1">"<strong>Qibla Finder</strong> Ease The user of the app to find
                     the correct
                     position of qibla to ensure the qibla is in the right direction. You can choose to either get the
                     location using the gps of your device by clicking <strong>Get Qibla Direction</strong> or you can
@@ -128,20 +128,20 @@
                     <div>
                         <img src="images/imran.JPG" alt="Member 1 : Imran" style="filter: brightness(150%);">
                         <div class="textMember">- Imran Bahar- <br><a
-                                href=mailto:“s65588@ocean.umt.edu.my?cc:”kevin@uplers.com”>S65588@ocean.umt.edu.my</a>
+                                href="mailto:s65588@ocean.umt.edu.my?cc:kevin@uplers.com">S65588@ocean.umt.edu.my</a>
                         </div>
                     </div>
                     <!-- test2 -->
                     <div>
                         <img src="images/Deng.jpg" alt="Member 3: Din">
                         <div class="textMember">- Farid Izzuddin -<br><a
-                                href=mailto:“s67662@ocean.umt.edu.my?cc:”kevin@uplers.com”>s67662@ocean.umt.edu.my</a>
+                                href="mailto:s67662@ocean.umt.edu.my?cc:kevin@uplers.com">s67662@ocean.umt.edu.my</a>
                         </div>
                     </div>
                     <div>
                         <img src="images/daus.jpg" alt="Member 3: Daus" style="image-zoom: 200px;">
                         <div class="textMember">- Tuan Firdaus -<br><a
-                                href=mailto:s65650@ocean.umt.edu.my?cc:”kevin@uplers.com”>s65650@ocean.umt.edu.my</a>
+                                href="mailto:s65650@ocean.umt.edu.my?cc:kevin@uplers.com">s65650@ocean.umt.edu.my</a>
                         </div>
                     </div>
 
