--- a/aboutUs.html
+++ b/aboutUs.html
@@ -65,7 +65,7 @@
             <div class="textSegment">
 
                 <h2 style="text-align: center; text-decoration: none;">About Us</h2>
-                <p style="text-align: center;" id="text0">
+                <p style="text-align: center;" class="text">
                     "<strong>Muslim Guider</strong> is a handy app for Muslims to stay connected to their faith
                     throughout the day. Find
                     prayer times accurately wherever you are in Malaysia using the <strong>Prayer Time</strong>. The app
@@ -78,38 +78,38 @@
                     understanding of Islam."
                 </p>
 
-                <a href="QiblaFinder.html" id="link1">
+                <a href="QiblaFinder.html" class="link">
                     <h2 style="text-align: center; text-decoration: none;">Qibla Finder</h2>
                 </a>
-                <p style="text-align: center;" id="text1">"<strong>Qibla Finder</strong> Ease The user of the app to find
+                <p style="text-align: center;" class="text">"<strong>Qibla Finder</strong> Ease The user of the app to find
                     the correct
                     position of qibla to ensure the qibla is in the right direction. You can choose to either get the
                     location using the gps of your device by clicking <strong>Get Qibla Direction</strong> or you can
                     search your preffered location using <strong>Search Bar</strong>."</p>
 
-                <a href="masjidLocator.html" id="link2">
+                <a href="masjidLocator.html" class="link">
                     <h2 style="text-align: center; text-decoration: none;">Mosque Locator</h2>
                 </a>
-                <p style="text-align: center;" id="text2">"<strong>Mosque Locator</strong> will help you find the nearest
+                <p style="text-align: center;" class="text">"<strong>Mosque Locator</strong> will help you find the nearest
                     mosque to your
                     current
                     location by using <strong>gps of your device</strong> ,the app will request for permission to use
                     your location or you can search your preffered location using <strong>Search Bar</strong> . </p>
 
-                <a href="prayerTime.html" id="link3">
+                <a href="prayerTime.html" class="link">
                     <h2 style="text-align: center; text-decoration: none;">Prayer Time</h2>
                 </a>
-                <p style="text-align: center;" id="text3">"<strong>Prayer Time</strong> will make sure you always get the
+                <p style="text-align: center;" class="text">"<strong>Prayer Time</strong> will make sure you always get the
                     precise prayer
                     time for subuh,zuhr,asr,maghrib and isha at all time <strong>in Malaysia</strong>. The app will
                     request for permission to use your location or you can search your preffered location using
                     <strong>Search Bar</strong> "
                 </p>
 
-                <a href="hadithFinderBaru.html" id="link4">
+                <a href="hadithFinderBaru.html" class="link">
                     <h2 style="text-align: center; text-decoration: none;">Hadith</h2>
                 </a>
-                <p style="text-align: center;" id="text4">"<strong>Hadith </strong>contains a collection of Hadith, the
+                <p style="text-align: center;" class="text">"<strong>Hadith </strong>contains a collection of Hadith, the
                     sayings and
                     teachings of Prophet Muhammad, to strengthen your understanding of Islam. you can search for various
                     hadith from many hadith writer such as <strong>Musnad Ahmad , Imam Malik, Sahih Muslim and many
