--- a/hadithChapterbaru3.html
+++ b/hadithChapterbaru3.html
@@ -87,7 +87,7 @@
     </div>
 
 
-    <script src=only_hadith/js/hadithChapterBaru3.js"></script>
+    <script src="only_hadith/js/hadithChapterBaru3.js"></script>
     <section class="footer">
         <div class="footer-row">
             <div class="footer-col">
