--- a/hadithFinderBaru.html
+++ b/hadithFinderBaru.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
 
   <link rel="stylesheet" href="header.css">
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="footerr.css" />
 </head>
 
@@ -65,7 +65,7 @@
       </tr>
       <tr>
         <td><a href="hadithChapterbaru2.html">Sahih Bukhari</a></td>
-        <td><a href="hadithChapterbaru2.html"">Imam Bukhari</a></td>
+        <td><a href="hadithChapterbaru2.html">Imam Bukhari</a></td>
       </tr>
       <tr>
         <td><a href="hadithChapterbaru3.html">Sunan al-Darimi</a></td>
@@ -80,7 +80,7 @@
       <tr>
         <th>Hadith Name</th>
         <th>Hadith Writer</th>
-      <tr>
+      </tr>
       <tr>
         <td><a href="hadithChapterbaru5.html">Muwatta Imam Malik </a></td>
         <td><a href="hadithChapterbaru5.html">Imam Malik ibn Anas</a></td>
@@ -100,7 +100,6 @@
       </tr>
       </tr>
     </table>
-  </div>
   </div>
 
 
