--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="homepage.css">
+  <link rel='stylesheet' href='homepage.css'>
   <link rel="icon" type="image/x-icon" href="/images/logo2new.png">
   <link rel="stylesheet" href="header.css">
   <link rel="stylesheet" href="footerr.css">
